# MSc

./: Graph.cpp  OVERVIEW.txt  ParityGame.cc  SmallProgressMeasures.cc  SmallProgressMeasures.h  SmallProgressMeasures.s  TODO.txt
benchmark/: avg.py  collect-results-nodecM.sh  parse-output.py  run-test.sh  tests-decycle.sh  tests-spm-spgip.sh  tests4-nodecM.sh  tests4.sh
benchmark/spgip/: Makefile  deciproc.env  gen-deciproc.py  largest-component.sh
proposal/: .gitignore  Makefile  proposal.tex  references.bib
src/: .gitignore  Abortable.cpp  Abortable.h  AsyncMpiAttractorAlgorithm.cc  AsyncMpiAttractorAlgorithm.h  Compatibility.cc  ComponentSolver.cc  ComponentSolver.cpp  ComponentSolver.h  ConcurrentRecursiveSolver.cc  ConcurrentRecursiveSolver.h  Decimal.cc  Decimal.h  DecycleSolver.cc  DecycleSolver.h  DeloopSolver.cc  DeloopSolver.h  DenseMap.h  DenseSet.h  Doxyfile  FocusListLiftingStrategy.cc  FocusListLiftingStrategy.h  GamePart.cc  GamePart.h  GamePartition.cc  GamePartition.h  Graph.cc  Graph.cpp  Graph.h  GraphOrdering.cc  GraphOrdering.h  Graph_impl.h  LiftingStrategy.cc  LiftingStrategy.h  LinPredLiftingStrategy.h  LinearLiftingStrategy.cc  LinearLiftingStrategy.h  Logger.cc  Logger.h  Makefile  (+51 more)
src/tools/: cache-testcases.sh  gather-results.sh  generate-cycle.py  generate-decision-procedures.py  generate-dull-solitaire-game.py  generate-friedmann-game.py  generate-jobs.sh  generate-jurdzinski-game.py  generate-scc-hard-game.py  generate-zielonka-hard-game.py  pgsolver-output-to-strategy.pl  pgsolver-output-to-winners.pl  run-tests.sh  test-focuslist-cache.sh  test-focuslist-time.sh
thesis/: Makefile  deleted-text.lyx  references.bib  results-spm-spgip-lifts-a.tex  results-spm-spgip-lifts.tex  results-spm-spgip-time-a.tex  results-spm-spgip-time.tex  results-spm-spgip-twoway-charts.tex  results-spm-spgip.tex  results-tests4-lifts-per-second.tex  results-tests4-seconds.tex  thesis.lyx  thesis.tex
thesis/illustrations/: Makefile  scc-parity-game.eps
